# auto_dark_mode

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  registry.rs
